<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name"> Historical Exchange Rates</string>
    <string name="action_help">Help</string>
    <string name="action_home">Home</string>
    <string name="startingDate">Starting Date</string>
    <string name="currency">Currency:</string>
    <string name="endingDate">Ending Date</string>
    <string name="date">Date</string>
    <string name="vector">Vector</string>
    <string name="rate">Rate</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="noData">No Data Found</string>
    <string name="go">GO</string>
    <string name="title_activity_graph_activity">graph_activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="viewData">View Data</string>
</resources>
