<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#ff9bc2ff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jgrice.currencyapp.TableView">

    <TextView
        android:id="@+id/currencyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <HorizontalScrollView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/viewGraphButton"
        android:layout_alignEnd="@+id/currencyTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/currencyTextView"
        android:layout_below="@+id/currencyTextView"
        android:fadeScrollbars="false">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <TableLayout
                android:id="@+id/currencyTableLayout"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/currencyTextView"
                android:gravity="center_horizontal"
                android:measureWithLargestChild="true"
                android:stretchColumns="0,1,2">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/dateHeadertextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/vectorHeaderTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vector"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/rateHeaderTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/rate"
                        android:textIsSelectable="false"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:id="@+id/noDataTableRow"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/noDataTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/noData"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

            </TableLayout>
        </ScrollView>
    </HorizontalScrollView>

    <Button
        android:id="@+id/viewGraphButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="View Graph" />

</RelativeLayout>
